# duckdb-nanodbc-extension

./: .gitignore  CMakeLists.txt  Makefile  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  _extension_distribution.yml  test-duckdb-odbc.yml
cmake/: find_odbc.cmake
data/: unicode_test.db
docker/linux_amd64/: Dockerfile
docker/linux_amd64_gcc4/: Dockerfile
docs/: README.md
scripts/: install_duckdb_odbc_linux.sh  install_duckdb_odbc_macos.sh  install_duckdb_odbc_windows.ps1  install_sqlite_odbc_macos.sh  test-odbc-dsn.ps1
src/: nanodbc_db.cpp  nanodbc_extension.cpp  nanodbc_scanner.cpp  nanodbc_stmt.cpp  nanodbc_utils.cpp  odbc_connection.cpp  odbc_db.cpp  odbc_encoding.cpp  odbc_exports.cpp  odbc_extension.cpp  odbc_parameters.cpp  odbc_scanner.cpp  odbc_statement.cpp  odbc_stmt.cpp  odbc_utils.cpp
src/include/: nanodbc_db.hpp  nanodbc_extension.hpp  nanodbc_scanner.hpp  nanodbc_stmt.hpp  nanodbc_utils.hpp  odbc_connection.hpp  odbc_db.hpp  odbc_encoding.hpp  odbc_extension.hpp  odbc_headers.hpp  odbc_parameters.hpp  odbc_scanner.hpp  odbc_statement.hpp  odbc_stmt.hpp  odbc_utils.hpp
src/nanodbc/: nanodbc.cpp
test/sql/: odbc.test  odbc_attach.test  odbc_basic.test  odbc_connection.test  odbc_data_types.test  odbc_decimal.test  odbc_dsn.test  odbc_error_handling.test  odbc_named_parameters.test  odbc_uncode.test  odbc_unicode.test
